<resources>
    <string name="app_name">FastCredits</string>
    <string name="e_mail">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="swipe_left_for_register">Deslizar para Registrar ahora</string>

    <!-- Sign Up screen -->

    <!-- Lender SignUp Form -->
    <string name="register">Registrar</string>
    <string name="document">Documento</string>
    <string name="name">Nombres</string>
    <string name="lastName">Apellidos</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="gender">Sexo</string>
    <string name="country">País</string>
    <string name="address">Dirección</string>
    <string name="homePhone">Teléfono Fijo</string>
    <string name="phone">Celular</string>
    <string name="re_type_password">Confirmar contraseña</string>

    <!-- Profile types -->
    <string-array name="profileType_sign_up">
        <item>Cliente</item>
        <item>Prestamista</item>
    </string-array>

    <!-- Profile types -->
    <string-array name="profileType">
        <item>Cliente</item>
        <item>Prestamista</item>
        <item>Rutero</item>
        <item>Administrador</item>
    </string-array>
    <!-- Profile types strings -->

    <string name="profileTypeTitle">Elegir tipo de perfil</string>
    <string name="title_activity_drawer_home">DrawerHome</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Cerrar sesión</string>

    <!-- Lender Drawer -->
    <string name="menu_profile">Perfil</string>
    <string name="menu_routes">Rutas</string>
    <string name="menu_routers">Ruteros</string>
    <string name="menu_clients">Clientes</string>
    <string name="menu_loan">Prestamos</string>
    <string name="menu_reports">Informes</string>

    <string name="rememberUser">Recordar usuario</string>
    <string name="title_activity_admin_bottom_naivation">BottomActivity</string>
    <string name="title_home">Solicitudes</string>
    <string name="title_dashboard">Administración</string>
    <string name="title_notifications">Usuarios</string>
    <string name="title_bottom_profile">Perfil</string>
    <string name="title_bottom_lender_details">Detalle del prestamista</string>
    <string name="title_bottom_pending_lender_details">Información del prestamista</string>

    <string name="text_enable_lender">Habilitar prestamista</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_users_drawer">UsersDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Clients Drawer -->
    <string name="menu_mycredits">Mis créditos</string>
    <string name="menu_history_credits">Historico créditos</string>
    <string name="menu_all_lenders">Prestamistas</string>
    <string name="title_activity_router_drawer">RouterDrawerActivity</string>

    <!-- Routers Drawer -->
    <string name="menu_active_lenders">Prestamistas</string>
    <string name="menu_clients_visit">Clientes</string>
    <string name="menu_router_reports">Reportes</string>

    <!-- Lender Loan Credits -->
    <string name="lender_periodicity">Periodicidad</string>
    <string name="lender_client">Seleccionar cliente</string>
    <string name="lender_amount">Monto del crédito</string>
    <string name="lender_interest">Ingrese el interés</string>
    <string name="lender_payment_method">Seleccione forma de pago</string>
    <string name="lender_payment_method_card">Tarjeta</string>
    <string name="lender_payment_method_cash">Efectivo</string>
    <string name="lender_btn_create_credit">Crear crédito</string>
    <string name="lender_fee">Cuota del crédito:</string>

</resources>