<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_alt_route_24"
            android:title="@string/menu_routes" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_directions_car_24"
            android:title="@string/menu_routers" />
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/menu_clients" />
        <item
            android:id="@+id/nav_loan"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:title="@string/menu_loan" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_baseline_book_24"
            android:title="@string/menu_reports" />
    </group>
</menu>