<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fastcredits.ui.home.HomeFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.fastcredits.ui.gallery.GalleryFragment"
        android:label="@string/menu_routes"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.fastcredits.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_routers"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_clients"
        android:name="com.example.fastcredits.ui.clients.ClientsFragment"
        android:label="@string/menu_clients"
        tools:layout="@layout/fragment_clients" />

    <fragment
        android:id="@+id/nav_loan"
        android:name="com.example.fastcredits.ui.loan.LoanFragment"
        android:label="@string/menu_loan"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_reports"
        android:name="com.example.fastcredits.ui.Reports.ReportsFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/fragment_slideshow" />
</navigation>