<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_bottom_home">

    <fragment
        android:id="@+id/navigation_bottom_home"
        android:name="com.example.fastcredits.ui.adminHome.AdminHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_admin_home" />

    <fragment
        android:id="@+id/navigation_bottom_dashboard"
        android:name="com.example.fastcredits.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_bottom_notifications"
        android:name="com.example.fastcredits.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_bottom_profile"
        android:name="com.example.fastcredits.ui.bottomProfile.BottomProfileFragment"
        android:label="@string/title_bottom_profile"
        tools:layout="@layout/fragment_bottom_profile" />
</navigation>