<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_users_navigation"
    app:startDestination="@+id/nav_router">

    <fragment
        android:id="@+id/nav_router"
        android:name="com.example.fastcredits.ui.routerLenders.RouterLendersFragment"
        android:label="@string/menu_active_lenders"
        tools:layout="@layout/fragment_users_my_credits" />

    <fragment
        android:id="@+id/nav_router_clients"
        android:name="com.example.fastcredits.ui.routerClients.RouterClientsFragment"
        android:label="@string/menu_clients_visit"
        tools:layout="@layout/fragment_users_all_lenders" />

    <fragment
        android:id="@+id/nav_router_reports"
        android:name="com.example.fastcredits.ui.routerReports.RouterReportsFragment"
        android:label="@string/menu_router_reports"
        tools:layout="@layout/fragment_users_all_lenders" />
</navigation>