<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpLenderActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">


            <TextView
                android:id="@+id/tv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/indigo_daisy"
                android:text="@string/register"
                android:textSize="60sp"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="25dp" />


            <TextView
                android:id="@+id/tv_profileType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profileTypeTitle"
                android:textSize="17sp"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp" />

            <Spinner
                android:id="@+id/profileType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/et_document"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/document"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="number"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/name"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="textPersonName"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_lastName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/lastName"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="textPersonName"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="17sp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <RadioButton android:id="@+id/et_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"/>
                <RadioButton android:id="@+id/et_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>

            </RadioGroup>

            <TextView
                android:id="@+id/tv_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="17sp"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp" />

            <Spinner
                android:id="@+id/countryList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"/>


            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/address"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="text"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/et_homePhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/homePhone"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="number"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/phone"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="number"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/e_mail"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="textPassword"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_repassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/re_type_password"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="15dp"
                android:inputType="textPassword"
                android:textSize="15sp" />



            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_custom"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:text="@string/register"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_arrow_left"
                android:layout_above="@id/swipeLeft"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/swipeLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/swipe_right_for_login"
                android:textSize="15sp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"/>
        </TableLayout>
    </ScrollView>
</LinearLayout>